position fixed dont show as intended on iphone trying to fix this issue

--- a/css/about.css
+++ b/css/about.css
@@ -5,6 +5,7 @@
 }
 
 #about main {
+    margin-top: 100vh;
     position: relative;
 }
 
@@ -12,8 +13,11 @@
 .hero {
     margin: 0;
     padding: 2rem 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: calc(100vh - 120px);
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,7 +26,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center center;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     /* background: linear-gradient(0deg, #ededed 50%, lightgray ); */
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; */
 }
